--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+###C###
+
 # Object files
 *.o
 *.ko
@@ -16,3 +18,37 @@
 *.exe
 *.out
 *.app
+
+###Android###
+ 
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Eclipse project files
+.classpath
+.project
+
+###OSX###
+ 
+.DS_Store
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
