add -lprotobuf-c, include song and header protos

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -8,7 +8,7 @@
 #################################################################
 
 CC=gcc
-LDFLAGS=-lssl -lcrypto
+LDFLAGS=-lssl -lcrypto -lprotobuf-c
 
 OS := $(shell uname -s)
 
