got wire runtime linked in android project, created Android classes for proto definitions

--- a/AndroidClientProject/AndroidClient/build.gradle
+++ b/AndroidClientProject/AndroidClient/build.gradle
@@ -14,14 +14,14 @@ repositories {
 
 android {
     compileSdkVersion 18
-    buildToolsVersion "17.0.0"
+    buildToolsVersion '17.0.0'
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 18
     }
-}
 
-dependencies {
-    compile files('libs/wire-runtime-1.2.0.jar')
+    dependencies {
+        compile files('libs/wire-runtime-1.2.0.jar')
+    }
 }
