--- a/AndroidClientProject/AndroidClient/src/main/AndroidManifest.xml
+++ b/AndroidClientProject/AndroidClient/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light">
         <activity
             android:name="com.example.myfirstapp.MainActivity"
             android:label="@string/app_name" >
@@ -28,6 +28,14 @@
             android:name="com.example.myfirstapp.DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
             android:parentActivityName="com.example.myfirstapp.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.myfirstapp.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.example.myfirstapp.MusicListActivity"
+            android:value="LIST"
+            android:parentActivityName="com.example.myfirstapp.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.myfirstapp.MainActivity" />
